# rns

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt
benchmark/src/: ntmath-bench.cpp  rns-rank-bench.cpp  rns-recover-bench.cpp
examples/: main.cpp  rns_conversions.cpp  rns_rank.cpp
src/: CMakeLists.txt
src/include/: ntmath.h  rns.h  utils.h
src/lib/: ntmath.cpp  rns.cpp
test/: CMakeLists.txt
test/src/: modular_test.cpp  rns_test.cpp
